--- a/bricklinkpagees.htm
+++ b/bricklinkpagees.htm
@@ -111,7 +111,7 @@
 <div class="flags">
   <div class="flag-row">
     <a href="bricklinkpagept.htm"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Flag_of_Portugal.svg/2560px-Flag_of_Portugal.svg.png" alt="Português"></a>
-    <a href="bricklinkpageen.htm"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Flag_of_the_United_Kingdom_%283-5%29.svg/330px-Flag_of_the_United_Kingdom_%283-5%29.svg.png" alt="English"></a>
+    <a href="index.htm"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Flag_of_the_United_Kingdom_%283-5%29.svg/330px-Flag_of_the_United_Kingdom_%283-5%29.svg.png" alt="English"></a>
   </div>
   <div class="flag-row">
     <a href="bricklinkpagefr.htm"><img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Flag_of_France.svg" alt="Français"></a>
@@ -202,3 +202,4 @@
 
 </body>
 </html>
+
