--- a/index.htm
+++ b/index.htm
@@ -97,7 +97,7 @@
   <div class="navbar">
     <!-- Logo à esquerda -->
     <div class="logo">
-      <a href="https://store.bricklink.com/WillHunting"><img src="C:\Users\gonca\Desktop\Transparent Logo.png" alt="Logo Loja"></a>
+      <a href="https://store.bricklink.com/WillHunting"><img src="imagens/Transparent Logo.png" alt="Logo Loja"></a>
     </div>
 
     <!-- Botões ao centro -->
@@ -111,7 +111,7 @@
 <div class="flags">
   <div class="flag-row">
     <a href="bricklinkpagept.htm"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Flag_of_Portugal.svg/2560px-Flag_of_Portugal.svg.png" alt="Português"></a>
-    <a href="bricklinkpageen.htm"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Flag_of_the_United_Kingdom_%283-5%29.svg/330px-Flag_of_the_United_Kingdom_%283-5%29.svg.png" alt="English"></a>
+    <a href="index.htm"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Flag_of_the_United_Kingdom_%283-5%29.svg/330px-Flag_of_the_United_Kingdom_%283-5%29.svg.png" alt="English"></a>
   </div>
   <div class="flag-row">
     <a href="bricklinkpagefr.htm"><img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Flag_of_France.svg" alt="Français"></a>
@@ -177,15 +177,15 @@
   <!-- Menu visual -->
   <div class="image-menu">
     <a href="setsen.htm">
-      <img src="C:\Users\gonca\Desktop\Sets.png" alt="Sets LEGO">
+      <img src="imagens/Sets.png" alt="Sets LEGO">
       <span>Sets</span>
     </a>
     <a href="minifiguras.html">
-      <img src="C:\Users\gonca\Desktop\Minifiguras.png" alt="Minifiguras LEGO">
+      <img src="imagens/Minifiguras.png" alt="Minifiguras LEGO">
       <span>Minifigures</span>
     </a>
     <a href="piecesen.htm">
-      <img src="C:\Users\gonca\Desktop\peças.png" alt="Peças LEGO">
+      <img src="imagens/peças.png" alt="Peças LEGO">
       <span>Pieces</span>
     </a>
   </div>
@@ -203,6 +203,7 @@
 </footer>
 
 </html>
+
 
 
 
