--- a/bricklinkpagept.htm
+++ b/bricklinkpagept.htm
@@ -97,7 +97,7 @@
   <div class="navbar">
     <!-- Logo à esquerda -->
     <div class="logo">
-      <a href="https://store.bricklink.com/WillHunting"><img src="C:\Users\gonca\Desktop\Transparent Logo.png" alt="Logo Loja"></a>
+      <a href="https://store.bricklink.com/WillHunting"><img src="images/Transparent Logo.png" alt="Logo Loja"></a>
     </div>
 
     <!-- Botões ao centro -->
@@ -177,15 +177,15 @@
   <!-- Menu visual -->
   <div class="image-menu">
     <a href="setspt.htm">
-      <img src="C:\Users\gonca\Desktop\Sets.png" alt="Sets LEGO">
+      <img src="imagens/Sets.png" alt="Sets LEGO">
       <span>Sets</span>
     </a>
     <a href="minifigspt.htm">
-      <img src="C:\Users\gonca\Desktop\Minifiguras.png" alt="Minifiguras LEGO">
+      <img src="imagens/Minifiguras.png" alt="Minifiguras LEGO">
       <span>Minifiguras</span>
     </a>
     <a href="piecespt.htm">
-      <img src="C:\Users\gonca\Desktop\peças.png" alt="Peças LEGO">
+      <img src="imagens/peças.png" alt="Peças LEGO">
       <span>Peças</span>
     </a>
   </div>
@@ -203,5 +203,6 @@
 </footer>
 
 </html>
+
 
 
