--- a/bricklinkpagept.htm
+++ b/bricklinkpagept.htm
@@ -97,7 +97,7 @@
   <div class="navbar">
     <!-- Logo à esquerda -->
     <div class="logo">
-      <a href="https://store.bricklink.com/WillHunting"><img src="images/Transparent Logo.png" alt="Logo Loja"></a>
+      <a href="https://store.bricklink.com/WillHunting"><img src="imagens/Transparent Logo.png" alt="Logo Loja"></a>
     </div>
 
     <!-- Botões ao centro -->
@@ -203,6 +203,7 @@
 </footer>
 
 </html>
+
 
 
 
