--- a/bricklinkpagefr.htm
+++ b/bricklinkpagefr.htm
@@ -102,7 +102,7 @@
 
     <!-- Botões ao centro -->
     <div class="nav-links">
-      <a href="https://store.bricklink.com/WillHunting#/shop?o={%22showHomeItems%22:1}">Home</a>
+      <a href="https://store.bricklink.com/WillHunting#/splash">Home</a>
       <a href="delivery.html">Livraison</a>
       <a href="https://store.bricklink.com/WillHunting#/terms">Termes</a>
     </div>
@@ -203,5 +203,6 @@
 </footer>
 
 </html>
+
 
 
