--- a/bricklinkpagees.htm
+++ b/bricklinkpagees.htm
@@ -102,7 +102,7 @@
 
     <!-- Botões ao centro -->
     <div class="nav-links">
-      <a href="https://store.bricklink.com/WillHunting#/shop?o={%22showHomeItems%22:1}">Home</a>
+      <a href="https://store.bricklink.com/WillHunting#/splash">Home</a>
       <a href="delivery.html">Entrega</a>
       <a href="https://store.bricklink.com/WillHunting#/terms">Términos</a>
     </div>
@@ -202,5 +202,6 @@
 
 </body>
 </html>
+
 
 
