--- a/index.htm
+++ b/index.htm
@@ -180,7 +180,7 @@
       <img src="imagens/Sets.png" alt="Sets LEGO">
       <span>Sets</span>
     </a>
-    <a href="minifiguras.html">
+    <a href="minifigsen.htm">
       <img src="imagens/Minifiguras.png" alt="Minifiguras LEGO">
       <span>Minifigures</span>
     </a>
@@ -203,6 +203,7 @@
 </footer>
 
 </html>
+
 
 
 
