--- a/minifigsen.htm
+++ b/minifigsen.htm
@@ -114,7 +114,7 @@
 
     <!-- Grelha com 18 categorias -->
     <div class="button-grid">
-      <a href="https://store.bricklink.com/WillHunting#/shop?o={%22pgSize%22:100,%22itemType%22:%22M%22,%22catID%22:%22878%22,%22showHomeItems%22:0}" class="cat-button">Dinsney</a>
+      <a href="https://store.bricklink.com/WillHunting#/shop?o={%22pgSize%22:100,%22itemType%22:%22M%22,%22catID%22:%22878%22,%22showHomeItems%22:0}" class="cat-button">Disney</a>
       <a href="https://store.bricklink.com/WillHunting#/shop?o={%22pgSize%22:100,%22itemType%22:%22M%22,%22catID%22:%22771%22,%22showHomeItems%22:0}" class="cat-button">Friends</a>
       <a href="https://store.bricklink.com/WillHunting#/shop?o={%22pgSize%22:100,%22itemType%22:%22M%22,%22catID%22:%22227%22,%22showHomeItems%22:0}" class="cat-button">Harry Potter</a>
       <a href="https://store.bricklink.com/WillHunting#/shop?o={%22pgSize%22:100,%22itemType%22:%22M%22,%22catID%22:%221042%22,%22showHomeItems%22:0}" class="cat-button">Hidden Side</a>
@@ -150,3 +150,4 @@
 </footer>
 
 </html>
+
